test/should-fail/变量使用关键字-2.j
function test takes nothing returns nothing
    local integer call
endfunction